# feature_based_projector

./: Dockerfile  Home_page.py  LICENSE  pyproject.toml  readme.MD  requirements.txt
.circleci/: config.yml
pages/: ♈ Dataset Loading.py  ♒ Local Analysis.py  ♒_single_serie_view.py  ♓ Global Analysis.py
precomputed_ressources/: features_list.pickle  features_m4.pickle  features_m4_modified.pickle  fft_and_freq.pickle  fft_freq.pickle  kde_h1_seed_0.pickle  loader.py  transformed_h1.pickle  wavelet_transform.pickle  welch_freq_and_psd.pickle
src/: dimension_reduction.py  features.py  features_computations.py  plotting_tools.py  space_projection.py  tools.py  utils.py
tests/: test_dimension_reduction.py  test_features.py  test_features_computation.py  test_space_projection.py  test_utils.py
