[tool.poetry]
name = "ts-projector"
version = "0.1.0"
license = "MIT"
description = "\"A tool to visualize time series on a streamlit app with differents point of views.\""
authors = ["CopainMalin <bgautier3800@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
plotly = "^5.18.0"
streamlit = "^1.29.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
umap-learn = "^0.5.5"
statsforecast = "^1.6.0"
tsfeatures = "^0.4.5"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
